--- a/tailwind-sandbox-starter/04-typography/index.html
+++ b/tailwind-sandbox-starter/04-typography/index.html
@@ -4,27 +4,86 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alkatra&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Typography</title>
+    <script>
+      tailwind.config = {
+          theme: {
+            fontFamily: {
+              'sans': ['Alkatra', 'system-ui'],
+              'serif': ['Alkatra', 'Georgia'],
+              'mono': ['Alkatra', 'SFMono-Regular'],
+
+            }
+          }
+        }
+    </script>
   </head>
   <body>
     <!-- Font Family -->
+    <div class="font-sans ">tailwind is awesome</div>
+    <div class="font-serif">tailwind is awesome</div>
+    <div class="font-mono">tailwind is awesome</div>
+    <div class="font-mono hover:font-serif md-font-sans">tailwind is awesome</div>
+
+
 
     <!-- Font Size -->
+    <div  class="text-xs">tailwind is awesome</div>
+    <div  class="text-sm">tailwind is awesome</div>
+    <div  class="text-base">tailwind is awesome</div>
+    <div  class="text-lg">tailwind is awesome</div>
+    <div  class="text-xl">tailwind is awesome</div>
+    <div  class="text-2xl">tailwind is awesome</div>
+    <div  class="text-3xl">tailwind is awesome</div>
+    <div  class="text-9xl">tailwind is awesome</div>
+
+
+
 
     <!-- Font Weight -->
+    <div class = "font-light">tailwind is awesome</div>
+    <div class = "font-normal">tailwind is awesome</div>
+    <div class = "font-medium">tailwind is awesome</div>
+    <div class = "font-semibold">tailwind is awesome</div>
+    <div class = "text-2xl font-[900]">tailwind is awesome</div>
+
 
     <!-- Letter Spacing -->
+    <div class="tracking-tight">tailwind is awesome</div>
+    <div class="tracking-normal">tailwind is awesome</div>
+    <div class="tracking-wide">tailwind is awesome</div>
+
 
     <!-- Text Alignment -->
+    <div class="text-right">tailwind is awesome</div>
+    <div class="text-center">tailwind is awesome</div>
+    <div class="text-left">tailwind is awesome</div>
+
+    
 
     <!-- Text Decoration -->
+    <div class="underline decoration-4 decoration-red-600">tailwind is awesome</div>
+    
+
 
     <!-- Decoration Style -->
-
+    <div class="underline decoration-dotted decoration-red-600">tailwind is awesome</div>
+    <div class="underline decoration-dashed decoration-red-600">tailwind is awesome</div>
+    <div class="underline decoration-double decoration-red-600">tailwind is awesome</div>
     <!-- Decoration Offset -->
+    <div class="underline decoration-8 decoration-red-500 underline-offset-5">tailwind</div>
 
     <!-- Text Transform -->
+    <div class="normal-case">tailwind</div>
+    <div class="uppercase">tailwind</div>
+    <div class="lowercase">tailwind</div>
+    <div class="capitalize">tailwind is awesome</div>
+
+
   </body>
 </html>
 
