--- a/tailwind-sandbox-starter/04-typography/index.html
+++ b/tailwind-sandbox-starter/04-typography/index.html
@@ -62,11 +62,16 @@
     <div class="text-right">tailwind is awesome</div>
     <div class="text-center">tailwind is awesome</div>
     <div class="text-left">tailwind is awesome</div>
+    <div class="text-justify">tailwind is awesome</div>
+
 
     
 
     <!-- Text Decoration -->
     <div class="underline decoration-4 decoration-red-600">tailwind is awesome</div>
+    <div class="underline decoration-1 decoration-red-600">tailwind is awesome</div>
+    <div class="underline decoration-2 decoration-red-600">tailwind is awesome</div>
+
     
 
 
@@ -81,7 +86,7 @@
     <div class="normal-case">tailwind</div>
     <div class="uppercase">tailwind</div>
     <div class="lowercase">tailwind</div>
-    <div class="capitalize">tailwind is awesome</div>
+    <div class="capitalize">tailwind</div>
 
 
   </body>
