--- a/tailwind-sandbox-starter/05-sizing/index.html
+++ b/tailwind-sandbox-starter/05-sizing/index.html
@@ -9,26 +9,56 @@
   </head>
   <body>
     <!-- Width -->
+    <div class="bg-blue-600 w-12">hello tailwind</div>
+    <div class="bg-blue-600 w-24">hello tailwind</div>
+    <div class="bg-blue-600 w-36">hello tailwind</div>
+    <div class="bg-blue-600 w-48">hello tailwind</div>
+    <div class="bg-green-600 w-96">hello tailwind</div>
+
+
 
     <!-- Percentages -->
+    <div class="bg-red-600 w-1/2">hello tailwind</div>
+    <div class="bg-red-600 w-1/3">hello tailwind</div>
+    <div class="bg-blue-600 w-1/4">hello tailwind</div>
+
+
 
     <!-- Width of the viewport -->
+    <div class="bg-orange-600 w-full">hello tailwind</div>
+    <div class="bg-orange-600 w-screen">hello tailwind</div>
+
 
     <!-- 100% of container -->
 
     <!-- min/max content -->
+    <div class="bg-blue-300 max-w-lg">hello tailwind</div>
+    <div class="bg-blue-300 min-w-full">hello tailwind</div>
 
     <!-- Arbitrary width -->
+    <div class="bg-gray-600 w-[20%]">hello tailwind</div>
 
     <!-- Max Width -->
+    <div class = "bg-green-600 max-w-4xl">hello</div>
 
     <!-- Height (Most of the same options as widths) -->
+    <div class = "flex flex-wrap">
+      <div class="bg-blue-300 w-24 h-12">tailwind </div>
+      <div class="bg-blue-300 w-24 h-36">tailwind </div>
+      <div class="bg-blue-300 w-24 h-64">tailwind </div>
+      <div class="bg-blue-300 w-24 h-96">tailwind </div>
+      <div class="bg-blue-300 w-24 max-h-max">tailwind </div>
+    </div>
 
     <!-- Min Height -->
+    <div class="bg-red-200 min-h-48">hello
+      <span class = "bg-blue-300 min-h-96">hello</span>
+    </div>
 
     <!-- Max Height -->
 
     <!-- Full screen height -->
+    <div class="bg-green-400 h-screen">tailwind</div>
   </body>
 </html>
 
