--- a/tailwind-sandbox-starter/07-backgrounds-shadows/index.html
+++ b/tailwind-sandbox-starter/07-backgrounds-shadows/index.html
@@ -1,21 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>Backgrounds & Shadows</title>
-  </head>
-  <body>
-    <!-- Background Classes -->
 
-    <!-- Gradients -->
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Backgrounds & Shadows</title>
+</head>
 
-    <!-- Shadows -->
+<body>
+  <!-- Background Classes -->
+  <img class="w-96 h-96 bg-auto bg-center" style="background-image: url(.././assets/img/img1.jpg);" />
 
-    <!-- Mix Blend -->
-  </body>
+  <!-- Gradients -->
+  <div class="h-screen bg-gradient-to-r from-red-400 to-blue-500">hello</div>
+
+  <!-- Shadows -->
+  <div class="w-96 mt-12 ml-4 p-4 shadow-sm shadow-red-500/80">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    Asperiores repellat iusto quo repellendus ex, veniam,
+    consectetur illo odit ullam impedit et perferendis esse suscipit sit debitis minus. Fugiat, magni ratione.</div>
+
+  <div class="w-96 mt-12 ml-4 p-4 shadow-lg shadow-green-500/80">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    Asperiores repellat iusto quo repellendus ex, veniam,
+    consectetur illo odit ullam impedit et perferendis esse suscipit sit debitis minus. Fugiat, magni ratione.</div>
+
+  <div class="w-96 mt-12 ml-4 p-4 shadow-xl shadow-blue-500/80">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    Asperiores repellat iusto quo repellendus ex, veniam,
+    consectetur illo odit ullam impedit et perferendis esse suscipit sit debitis minus. Fugiat, magni ratione.</div>
+
+  <div class="w-96 mt-12 ml-4 p-4 mb-8 shadow-2xl shadow-pink-500/80">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    Asperiores repellat iusto quo repellendus ex, veniam,
+    consectetur illo odit ullam impedit et perferendis esse suscipit sit debitis minus. Fugiat, magni ratione.</div>
+
+    <div class="w-96 mt-12 ml-4 p-4 mb-8 shadow-inner shadow-pink-800">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      Asperiores repellat iusto quo repellendus ex, veniam,
+      consectetur illo odit ullam impedit et perferendis esse suscipit sit debitis minus. Fugiat, magni ratione.</div>
+  
+      <div class="w-96 mt-12 ml-4 p-4 mb-8 shadow-inner shadow-pink-500">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Asperiores repellat iusto quo repellendus ex, veniam,
+        consectetur illo odit ullam impedit et perferendis esse suscipit sit debitis minus. Fugiat, magni ratione.</div>
+    
+    
+  
+  <!-- Mix Blend -->
+  
+</body>
+
 </html>
 
 <!-- Background Size
