--- a/tailwind-sandbox-starter/06-layout-position/index.html
+++ b/tailwind-sandbox-starter/06-layout-position/index.html
@@ -9,28 +9,94 @@
   </head>
   <body>
     <!-- Positioning -->
+    <div class = "relative bg-pink-300 w-48 h-36">
+      <div class="absolute bottom-0 right-0 h-12 w-12 bg-yellow-200">
+        <p>hello</p>
+      </div> 
+    </div>
 
     <!-- Top left corner -->
+    <div class = "relative bg-pink-300 w-48 h-36 mt-2">
+      <div class="absolute top-0 left-0 h-12 w-12 bg-green-500">
+        <p>hello</p>
+      </div> 
+    </div>
 
     <!-- Top right corner -->
+    <div class = "relative bg-pink-300 w-48 h-36 mt-2">
+      <div class="absolute top-0 right-0 h-12 w-12 bg-green-500">
+        <p>hello</p>
+      </div> 
+    </div>
 
     <!-- Bottom left corner -->
+    <div class = "relative bg-pink-300 w-48 h-36 mt-2">
+      <div class="absolute bottom-0 left-0 h-12 w-12 bg-green-500">
+        <p>hello</p>
+      </div> 
+    </div>
 
     <!-- Bottom right corner -->
+    <div class = "relative bg-pink-300 w-48 h-36 mt-2">
+      <div class="absolute bottom-0 right-0 h-12 w-12 bg-green-500">
+        <p>hello</p>
+      </div> 
+    </div>
 
     <!-- Span top edge -->
-
+    <div class = "relative bg-pink-300 w-48 h-36 mt-2">
+      <div class="absolute inset-x-0 top-0 h-12  bg-green-500">
+        <p>hello</p>
+      </div> 
+    </div>
     <!-- Span left edge -->
+    <div class = "relative bg-pink-300 w-48 h-36 mt-2">
+      <div class="absolute inset-y-0 left-0 w-12  bg-green-500">
+        <p>hello</p>
+      </div> 
+    </div>
 
     <!-- Span right edge -->
+    <div class = "relative bg-pink-300 w-48 h-36 mt-2">
+      <div class="absolute inset-y-0 right-0  w-12 bg-green-500">
+        <p>hello</p>
+      </div> 
+    </div>
 
     <!-- Span bottom edge -->
+    <div class = "relative bg-pink-300 w-48 h-36 mt-2">
+      <div class="absolute inset-x-0 bottom-0 h-12 bg-green-500">
+        <p>hello</p>
+      </div> 
+    </div>
 
     <!-- Display Classes -->
+    <div>Lorem ipsum dolor sit amet consectetur<span class = "inline font-bold">hello</span>
+       adipisicing elit. Eveniet eius, vel fugit 
+     <span class = "block font-bold">block</span>  deleniti iusto tenetur dicta ea
+      vitae eligendi? <span class = "bg-red-300 inline-block font-bold">inline-block hello</span> consectetur hic corporis
+       <span class = "inline-block font-bold">
+        <li>item 1</li>
+       <li>item 2</li>
+       <li>item 3</li></span>
+      voluptatibus ex sequi deserunt at culpa iure?
+    </div>
+
 
     <!-- Z-Index -->
+    <div class = "relative h-36">
+      <div class = "absolute w-24 h-12 left-10 mt-4 bg-red-100 z-20">1</div>
+      <div class = "absolute w-24 h-12 mt-4 left-20 bg-red-200 z-40">2</div>
+      <div class = "absolute w-24 h-12 mt-4 left-40 bg-red-300 z-50">3</div>
+      <div class = "absolute w-24 h-12 mt-4 left-60 bg-red-400 z-30">4</div>
+    </div>
+   
+
 
     <!-- Floats -->
+    <img src = "../assets/img/img8.jpg" class = " w-36 h-36 float-right"/>
+    <img src = "../assets/img/img8.jpg" class = " w-36 h-36 float-left"/>
+
   </body>
 </html>
 
