--- a/tailwind-sandbox-starter/08-borders/index.html
+++ b/tailwind-sandbox-starter/08-borders/index.html
@@ -9,10 +9,25 @@
   </head>
   <body>
     <!-- Border Width & Colors -->
+    <div class="border-2 border-red-600 w-96 p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus at eveniet beatae distinctio! Velit quis commodi recusandae? Cum nesciunt atque ducimus deleniti sequi, alias esse voluptas hic suscipit eaque soluta.</div>
+    <div class="border-8 border-green-600 w-96 p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus at eveniet beatae distinctio! Velit quis commodi recusandae? Cum nesciunt atque ducimus deleniti sequi, alias esse voluptas hic suscipit eaque soluta.</div>
+    <div class="border-l-2 border-blue-600 w-96 p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus at eveniet beatae distinctio! Velit quis commodi recusandae? Cum nesciunt atque ducimus deleniti sequi, alias esse voluptas hic suscipit eaque soluta.</div>
+    <div class="border-r-4 border-red-300 w-96 p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus at eveniet beatae distinctio! Velit quis commodi recusandae? Cum nesciunt atque ducimus deleniti sequi, alias esse voluptas hic suscipit eaque soluta.</div>
+    <div class="border-b-4 border-green-400 w-96 p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus at eveniet beatae distinctio! Velit quis commodi recusandae? Cum nesciunt atque ducimus deleniti sequi, alias esse voluptas hic suscipit eaque soluta.</div>
+    <div class="border-t-4 border-purple-600 w-96 p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus at eveniet beatae distinctio! Velit quis commodi recusandae? Cum nesciunt atque ducimus deleniti sequi, alias esse voluptas hic suscipit eaque soluta.</div>
+    <div class="border-x-4 border-red-600 w-96 p-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus at eveniet beatae distinctio! Velit quis commodi recusandae? Cum nesciunt atque ducimus deleniti sequi, alias esse voluptas hic suscipit eaque soluta.</div>
+    <div class="border-y-4 border-pink-600 w-96 p-4 mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus at eveniet beatae distinctio! Velit quis commodi recusandae? Cum nesciunt atque ducimus deleniti sequi, alias esse voluptas hic suscipit eaque soluta.</div>
 
     <!-- Border Radius -->
+    <div class="border-4 border-red-600 w-96 p-4 rounded-2xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus at eveniet beatae distinctio! Velit quis commodi recusandae? Cum nesciunt atque ducimus deleniti sequi, alias esse voluptas hic suscipit eaque soluta.</div>
+    <div class="border-4 border-red-600 w-96 p-4 rounded-full">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus at eveniet beatae distinctio! Velit quis commodi recusandae? Cum nesciunt atque ducimus deleniti sequi, alias esse voluptas hic suscipit eaque soluta.</div>
+    <div class="border-4 border-red-600 w-96 p-4 rounded-t-2xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus at eveniet beatae distinctio! Velit quis commodi recusandae? Cum nesciunt atque ducimus deleniti sequi, alias esse voluptas hic suscipit eaque soluta.</div>
+    <div class="border-2 border-blue-600 w-96 p-4 rounded-b-xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus at eveniet beatae distinctio! Velit quis commodi recusandae? Cum nesciunt atque ducimus deleniti sequi, alias esse voluptas hic suscipit eaque soluta.</div>
+
 
     <!-- Outline -->
+    <input type = "text" class = "outline-4 outline-red-400"/>
+    <button class ="outline outline-3 outline-offeset-2 outline-blue-700 mb-8">click me</button>
   </body>
 </html>
 
