--- a/tailwind-sandbox-starter/11-breakpoints/index.html
+++ b/tailwind-sandbox-starter/11-breakpoints/index.html
@@ -6,9 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Breakpoints & Media Queries</title>
+
   </head>
   <!-- Tailwind is mobile-first -->
-  <body></body>
+  <body class = "bg-black text-white sm:bg-red-300 md:bg-red-600 lg:bg-green-300 xl:bg-blue-500">
+    <h1></h1>
+    <script>
+      function showWidth(){
+        const width = window.innerWidth;
+        document.querySelector("h1").innerText = `Width: ${width}`;
+      }
+      window.onload = showWidth;
+      window.onresize = showWidth;
+    </script>
+  </body>
 </html>
 
 <!-- Breakpoint Classes
