--- a/tailwind-sandbox-starter/12-columns/index.html
+++ b/tailwind-sandbox-starter/12-columns/index.html
@@ -9,8 +9,18 @@
   </head>
   <body>
     <!-- Columns -->
+    <div class="columns-2xs ">
+      <img class = "w-full" src = "../assets/img/img1.jpg"/>
+      <img class = "w-full" src = "../assets/img/img2.jpg"/>
+      <img class = "w-full" src = "../assets/img/img3.jpg"/>
+      <img class = "w-full" src = "../assets/img/img4.jpg"/>
+
+    </div>
 
     <!-- Aspect Ratio -->
+    <img class = "w-24 aspect-video" src = "../assets/img/img1.jpg"/>
+    <img class = "w-24 aspect-square" src = "../assets/img/img6.jpg"/>
+    
   </body>
 </html>
 
