--- a/tailwind-sandbox-starter/14-grid/index.html
+++ b/tailwind-sandbox-starter/14-grid/index.html
@@ -9,8 +9,31 @@
   </head>
   <body>
     <!-- Grid cols and rows -->
+    <div class = "grid grid-cols-2 grid-rows-2">
+      <div class=" bg-pink-300 border h-20 border-pink-500">items1</div>
+      <div class="bg-pink-300  border h-auto border-pink-500">items2</div>
+      <div class="bg-pink-300 border h-20 border-pink-500">items3</div>
+      <div class="bg-pink-300 border h-20 border-pink-500">items4</div>
+      <div class="bg-pink-300 border h-20 border-pink-500">items5</div>
+      <div class="bg-pink-300 border h-20 border-pink-500">items6</div>
+      <div class="bg-pink-300 border h-20 border-pink-500">items7</div>
+      <div class="bg-pink-300 border h-20 border-pink-500">items8</div>
+      <div class="bg-pink-300 border h-20 border-pink-500">items9</div>
+    </div>
 
     <!-- Col and row span -->
+    <div class = "grid grid-cols-2 grid-rows-2">
+      <div class=" md:col-span-3 bg-pink-300 border h-auto border-pink-500">items1</div>
+      <div class="bg-pink-300  border h-auto border-pink-500">items2</div>
+      <div class="bg-pink-300 border h-20 border-pink-500">items3</div>
+      <div class="bg-pink-300 border h-20 border-pink-500">items4</div>
+      <div class="bg-pink-300 border h-20 border-pink-500">items5</div>
+      <div class="bg-pink-300 border h-20 border-pink-500">items6</div>
+      <div class="bg-pink-300 border h-20 border-pink-500">items7</div>
+      <div class="bg-pink-300 border h-20 border-pink-500">items8</div>
+      <div class="bg-pink-300 border h-20 border-pink-500">items9</div>
+    </div>
+  
   </body>
 </html>
 
@@ -39,4 +62,6 @@
   grid-rows-5	    grid-template-rows: repeat(5, minmax(0, 1fr));
   grid-rows-6	    grid-template-rows: repeat(6, minmax(0, 1fr));
   grid-rows-none	grid-template-rows: none;
-  -->
+  row-span-1/2/3/4...consume row
+  col-span-1/2/3/4.....consume col
+-->
