--- a/tailwind-sandbox-starter/17-customization/index.html
+++ b/tailwind-sandbox-starter/17-customization/index.html
@@ -6,9 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Customization</title>
+    <script>
+      tailwind.config = {
+        theme:{
+          screens:{
+              sm:'550px',
+              md:'800px',
+              lg:'1100px',
+              xl:'1200px',
+          }
+        }
+      }
+    </script>
   </head>
   <body
-    class="bg-black sm:bg-green-800 md:bg-primary lg:bg-yellow-800 xl:bg-purple-800 2xl:bg-orange-800"
+    class="bg-black sm:bg-green-800 md:bg-blue-400 lg:bg-yellow-800 xl:bg-purple-800 2xl:bg-orange-800"
   >
     <h1 class="text-white text-xl md:text-3xl xl:text-5xl">
       Tailwind is awesome
