--- a/tailwind-sandbox-starter/18-dark-mode/index.html
+++ b/tailwind-sandbox-starter/18-dark-mode/index.html
@@ -13,7 +13,7 @@
     </script>
   </head>
   <body class="dark:bg-black dark:text-white">
-    <div class="dark:bg-black dark:text-white bg-white text-black font-10 h-12 rounded">hello</div>
+    <div class="dark:bg-black dark:text-white font-10 bg-white text-black font-10 h-12 rounded">hello</div>
      <input type="checkbox">toggle for darkmode 
      <script>
       document.querySelector("input").addEventListener("change",()=>{
