--- a/tailwindMiniProjects/EmailSubscribeUsingTailwind/index.html
+++ b/tailwindMiniProjects/EmailSubscribeUsingTailwind/index.html
@@ -16,7 +16,7 @@
                 <h2 class = "font-serif text-white  text-2xl md:text-left">Get diet and fitness tips in your inbox</h2>
                 <p class = "text-white  md:text-left md:max-w-xs sm:max-w-sm text-xs my-4 leading-5 tracking-wide">Eat better and exercise better. Sign up for the Diet & Fitness newsletter.</p>
                 <div class = "flex flex-col md:flex-row space-y-3 md:space-y-0 md:space-x-3 ">
-                    <input type = "text" placeholder = "Enter your email address"class = "border focus:shadow-md focus:shadow-zinc-200 border-zinc-500 items-center bg-zinc-900 focus:text-white outline-none text-center text-md px-5 px-5 py-2 " />
+                    <input type = "text" placeholder = "Enter your email address"class = "border focus:shadow-md focus:shadow-zinc-200 border-zinc-500 items-center bg-zinc-900 text-white outline-none text-center text-md px-5 px-5 py-2 " />
                     <button class = "bg-lime-500 hover:bg-lime-700 hover:text-white text-xs rounded-md  px-4 py-2 duration-500">Subscribe</button>
                 </div>
             </div>
