--- a/tailwindMiniProjects/Product Modal/index.html
+++ b/tailwindMiniProjects/Product Modal/index.html
@@ -35,12 +35,12 @@
                <div class="bg-green-400 rounded-full w-3 h-3 duration-100 group-hover:animate-ping"></div>
                <span class = "text-sm">50+ pcs. in stock</span>
             </div>
-            <div class="flex flex-col gap-3  text-center md:flex-row ">
-                <div class = "flex  border-2 border-gray-300 px-3 py-2 rounded-md hover:scale-105 duration-200 hover:shadow-lg hover:shadow-blue-400">
+            <div class="flex flex-col gap-3   md:flex-row ">
+                <div class = "flex  items-center justify-center border-2 border-gray-300 px-3 py-2 rounded-md hover:scale-105 duration-200 hover:shadow-lg hover:shadow-blue-400">
                     <img src = "./images/weight.png" class = "w-8 h-8"/>  
                     <span>Add to cart</span>
                 </div>
-                <div class = "flex border-2 border-gray-300 px-3 py-2 rounded-md hover:scale-105 duration-200 hover:shadow-lg hover:shadow-red-300">
+                <div class = "flex border-2 items-center justify-center border-gray-300 px-3 py-2 rounded-md hover:scale-105 duration-200 hover:shadow-lg hover:shadow-red-300">
                     <img src = "./images/heart.png" class = "w-8 h-8 "/>  
                     <span >Add to Wishlist</span>
                 </div>
